# cpp_starter_project_old

./: .cirrus.yml  .cmake-format.yaml  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
support/: CMakeLists.txt
support/project_options/: CMakeLists.txt
support/project_warnings/: CMakeLists.txt
test/unit/: CMakeLists.txt
