add_library(project_options INTERFACE)

include(CheckCXXCompilerFlag)
if(ENABLE_COVERAGE)
    message(STATUS "CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}")
    if(${CMAKE_CXX_COMPILER_ID} EQUAL "GNU")
        target_compile_options(project_options INTERFACE --coverage -O0 -g)
        target_link_libraries(project_options INTERFACE --coverage)
    elseif(${CMAKE_CXX_COMPILER_ID} EQUAL "CLANG")
        target_compile_options(project_options INTERFACE --coverage -O0 -g)
        target_link_libraries(project_options INTERFACE --coverage)
    else()
        message(STATUS "Compiler does not support code coverage")
    endif()
endif()
